Fix sidebar expand/collapse button

--- a/docusaurus/src/scss/sidebar.scss
+++ b/docusaurus/src/scss/sidebar.scss
@@ -352,9 +352,9 @@ $selector-color-mode-toggle-wrapper: 'div[class*="ColorModeToggle"]';
         content:'\E128';
       }
     }
-    // svg {
-    //   display: none;
-    // }
+    [class*="collapseSidebarButtonIcon"] {
+      display: none;
+    }
     [class*="expandButton"] {
       svg {
         display: none;
